Lab-2 pseudo done -1

--- a/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_generate_document.ipynb
+++ b/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_generate_document.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -51,7 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Get and set the variables used in the notebook \n",
+    "os_host='<Opensearch host API Private IP>'\n",
+    "os_user='<Opensearch username>' # i,e osmaster\n",
+    "os_pass='<Opensearch password>'\n",
+    "compartment_id = '<your compartment ocid>'\n",
+    "service_endpoint='https://inference.generativeai.us-chicago-1.oci.oraclecloud.com'\n",
+    "#print(f'Host: {os_host} user: {os_user} pass: {os_pass}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -66,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -99,8 +116,6 @@
     "#OCI Gen AI Embeddings\n",
     "from langchain_community.embeddings import OCIGenAIEmbeddings\n",
     "\n",
-    "compartment_id = \"ocid1.compartment.oc1..aaaaaaaa452ndb7pt7ygkd2l75ws5k6sxihp2f5xq5m3d6v4lb6lgzj2jniq\"\n",
-    "service_endpoint='https://inference.generativeai.us-chicago-1.oci.oraclecloud.com'\n",
     "model_id = \"cohere.command\"\n",
     "embed_model_id=\"cohere.embed-english-v3.0\"\n",
     "\n",
@@ -114,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -138,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -164,7 +179,7 @@
        "<OpenSearch([{'host': '10.0.3.229', 'port': 9200}])>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,8 +188,8 @@
     "#connect to OS cluster\n",
     "from opensearchpy import OpenSearch, helpers\n",
     "from opensearchpy.client.http import HttpClient\n",
-    "host = [{'host': '10.0.3.229', 'port': 9200}]\n",
-    "auth = ('osmaster', 'Welcome#1234!')\n",
+    "host = [{'host': f'{os_host}', 'port': 9200}]\n",
+    "auth = (f'{os_user}', f'{os_pass}')\n",
     "client = OpenSearch(\n",
     "    hosts=host,\n",
     "    http_compress=True,\n",
@@ -187,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -273,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +297,7 @@
        "(39, [])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -330,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -383,7 +398,6 @@
     "    #print(f\"{i+1}. Title: {Title}, Score: {score}\")\n",
     "\n",
     "#pg_table = {'Page Content' : pg_list, 'Score' : score_list}\n",
-    "#print(tabulate(pg_table, headers='keys', tablefmt='pretty', stralign = 'left', numalign = 'center'))\n",
     "mt_table = {'Metadata' : mt_list, 'Score' : score_list}\n",
     "print(tabulate(mt_table, headers='keys', tablefmt='pretty', stralign = 'left', numalign = 'center'))"
    ]
@@ -404,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -433,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -467,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -480,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -496,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -510,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -528,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -539,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -548,13 +562,12 @@
     "#check response from llm\n",
     "import json\n",
     "string = '{'+str(response).rsplit('{',1)[1].rsplit('}',1)[0]+'}'\n",
-    "#string=str(response).replace('```','').replace('json\\n','').rsplit('}',1)[0]+'}'\n",
     "data=json.loads(string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -568,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -584,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -619,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
