--- a/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_hybrid_search.ipynb
+++ b/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_hybrid_search.ipynb
@@ -53,6 +53,24 @@
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "#Get and set the variables used in the notebook \n",
+    "#NOTE: It is recommended you delete host name, user or password after execution of your notebook for the workshop is over.\n",
+    "#Usage of the above credentials is for illustration purposes only, not for production workloads\n",
+    "os_host='<Opensearch host API Private IP>'\n",
+    "os_user='<Opensearch username>' # i,e osmaster\n",
+    "os_pass='<Opensearch password>'\n",
+    "compartment_id = '<your compartment ocid>'\n",
+    "#print(f'Host: {os_host} user: {os_user} pass: {os_pass}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -60,7 +78,7 @@
        "<OpenSearch([{'host': '10.0.3.229', 'port': 9200}])>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,8 +87,8 @@
     "#connect to OS cluster\n",
     "from opensearchpy import OpenSearch, helpers\n",
     "from opensearchpy.client.http import HttpClient\n",
-    "host = [{'host': '10.0.3.229', 'port': 9200}]\n",
-    "auth = ('osmaster', 'Welcome#1234!')\n",
+    "host = [{'host': f'{os_host}', 'port': 9200}]\n",
+    "auth = (f'{os_user}', f'{os_pass}')\n",
     "client = OpenSearch(\n",
     "    hosts=host,\n",
     "    http_compress=True,\n",
@@ -96,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -108,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -133,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -151,19 +169,19 @@
     "# Delete and create/re-create the pipeline\n",
     "try:\n",
     "    response=client.ingest.delete_pipeline(id=ingest_pl)\n",
-    "    print(f\"Pipeline {pipeline_name} deleted successfully\")\n",
+    "    print(f\"Pipeline {ingest_pl} deleted successfully\")\n",
     "except Exception as e:\n",
     "    pass\n",
     "try:\n",
     "    response=client.ingest.put_pipeline(id=ingest_pl, body=ingest_pl_body)\n",
-    "    print(f'Index {pipeline_name} created successfully')\n",
+    "    print(f'Index {ingest_pl} created successfully')\n",
     "except Exception as e:\n",
-    "    print(f\"Error creating os settings: {e}\")"
+    "    print(f\"Error creating ingest pipeline: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -174,7 +192,7 @@
     "index_body= {\n",
     "    \"settings\": {\n",
     "        \"index.knn\": True,\n",
-    "        \"default_pipeline\": f\"{pipeline_name}\"\n",
+    "        \"default_pipeline\": f\"{ingest_pl}\"\n",
     "    },\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
@@ -217,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -247,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -263,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -274,7 +292,7 @@
        "(30, [])"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -338,8 +356,8 @@
    "source": [
     "# Define the OpenSearch client using the custom HTTP client\n",
     "client = OpenSearch(\n",
-    "    hosts=[{'host': '10.0.3.229', 'port': 9200}],\n",
-    "    http_auth=('osmaster', 'Welcome#1234!'),  # Replace with your username and password\n",
+    "    hosts=[{'host': f'{os_host}', 'port': 9200}],\n",
+    "    http_auth=(f'{os_user}', f'{os_pass}'),  # Replace with your username and password\n",
     "    use_ssl = True,\n",
     "    verify_certs = False,\n",
     "    ssl_show_warn = False,\n",
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -364,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -397,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -427,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -435,13 +453,12 @@
    "source": [
     "#User query for hybrid indexed search using the hybrid search pipeline\n",
     "user_query = \"Find all liver transplantation trials\"\n",
-    "num_titles = 4\n",
-    "#model_id='1wvDKZEBWEIPcnamv7eS'"
+    "num_titles = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -488,14 +505,14 @@
     "results = client.search(\n",
     "    body=query_body,\n",
     "    index=index_name,\n",
-    "    search_pipeline=pl_name\n",
+    "    search_pipeline=srch_pl_name\n",
     ")\n",
     "#results['hits']['hits'][0]['_source']['Title']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -522,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -569,13 +586,13 @@
     "results = client.search(\n",
     "    body=query_body,\n",
     "    index=index_name,\n",
-    "    search_pipeline=pl_name\n",
+    "    search_pipeline=srch_pl_name\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
