--- a/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_vector_search_ext.ipynb
+++ b/sample-workshop/LAB-2 OCI Data science/files/notebooks/demo_vector_search_ext.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -46,7 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Get and set the variables used in the notebook \n",
+    "#NOTE: It is recommended you delete host name, user or password after execution of your notebook for the workshop is over.\n",
+    "#Usage of the above credentials is for illustration purposes only, not for production workloads\n",
+    "os_host='<Opensearch host API Private IP>'\n",
+    "os_user='<Opensearch username>' # i,e osmaster\n",
+    "os_pass='<Opensearch password>'\n",
+    "compartment_id = '<your compartment ocid>'\n",
+    "service_endpoint='https://inference.generativeai.us-chicago-1.oci.oraclecloud.com'\n",
+    "#print(f'Host: {os_host} user: {os_user} pass: {os_pass}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
@@ -57,7 +76,7 @@
        "<OpenSearch([{'host': '10.0.3.229', 'port': 9200}])>"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,8 +85,8 @@
     "#connect to OS cluster\n",
     "from opensearchpy import OpenSearch, helpers\n",
     "from opensearchpy.client.http import HttpClient\n",
-    "host = [{'host': '10.0.3.229', 'port': 9200}]\n",
-    "auth = ('osmaster', 'Welcome#1234!')\n",
+    "host = [{'host': f'{os_host}', 'port': 9200}]\n",
+    "auth = (f'{os_user}', f'{os_pass}')\n",
     "client = OpenSearch(\n",
     "    hosts=host,\n",
     "    http_compress=True,\n",
@@ -94,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
@@ -186,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 62,
    "metadata": {
     "tags": []
    },
@@ -216,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -227,7 +246,7 @@
        "(30, [])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -275,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -291,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
@@ -312,6 +331,7 @@
     }
    ],
    "source": [
+    "from tabulate import tabulate\n",
     "results = client.search(\n",
     "    body=query_body,\n",
     "    index=index_name\n",
@@ -332,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -348,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -400,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,12 +428,11 @@
     "from langchain_community.embeddings import OCIGenAIEmbeddings\n",
     "from ads.llm import GenerativeAIEmbeddings\n",
     "\n",
-    "compartment_id = \"ocid1.compartment.oc1..aaaaaaaay4b33s4cl7a3l3ehzklo3hsozhxcuuhil4nwnn5m76gjh4xypoua\"\n",
     "embed_model_id=\"cohere.embed-english-v3.0\"\n",
     "\n",
     "oci_embeddings = OCIGenAIEmbeddings(\n",
     "    model_id=embed_model_id,\n",
-    "    service_endpoint=\"https://inference.generativeai.us-chicago-1.oci.oraclecloud.com\",\n",
+    "    service_endpoint=service_endpoint,\n",
     "    compartment_id=compartment_id,\n",
     "    model_kwargs={\"truncate\":True}\n",
     ")\n",
@@ -426,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
@@ -512,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 72,
    "metadata": {
     "tags": []
    },
@@ -523,7 +542,7 @@
        "(30, [])"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 73,
    "metadata": {
     "tags": []
    },
@@ -571,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -587,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 75,
    "metadata": {
     "tags": []
    },
@@ -599,7 +618,7 @@
       "+-----------------------------------------------------------------------------------------------------+-------+\n",
       "| Title                                                                                               | Score |\n",
       "+-----------------------------------------------------------------------------------------------------+-------+\n",
-      "| A Prospective, Single-Arm Trial of an Innovative Liver Transplantation Technique                    | 0.82  |\n",
+      "| A Prospective, Single-Arm Trial of an Innovative Liver Transplantation Technique                    | 0.81  |\n",
       "| A Randomized, Double-Blind, Placebo-Controlled Trial of 'Cirrinol' for Liver Cirrhosis Treatment    | 0.81  |\n",
       "| A Randomized, Open-Label Trial of Stem Cell Therapy for Acute Liver Failure                         | 0.79  |\n",
       "| A Phase 3 Randomized Clinical Trial of an Investigational Drug for Newly Diagnosed Multiple Myeloma | 0.78  |\n",
@@ -629,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
@@ -645,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
